--- a/application1/templates/new.html
+++ b/application1/templates/new.html
@@ -9,6 +9,7 @@
 </head>
 <body bgcolor="blue">
     <h1>hellow baabteee</h1>
+    <h3>welcome my page</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, molestias omnis aperiam fuga iusto maxime fugiat voluptates dolor cumque blanditiis molestiae eius! Modi odio eius quam a id cum similique.</p>
     <img src="{% static 'image/download.jpg' %}" alt="">
 </body>
